--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prestart": "npm run build",
     "start": "node dist/app",
-    "start:dev": "nodemon src/app --exec \"npm run lint && node -r babel-register\"",
+    "start:dev": "nodemon src/app --exec \" node -r babel-register\"",
     "clean": "rimraf dist",
     "build": "npm run clean && mkdir dist && babel src/ -s -d dist",
     "test": "mocha --exit --require babel-register test/",
