--- a/client/.env.local.build
+++ b/client/.env.local.build
@@ -1,12 +1,12 @@
 # Web config Setting
 DIST="./dist"
 PORT=3000
-MAIN_JS="./src/index.js"
+MAIN_JS="./src/frontend/index.js"
 NODE_ENV="production"
 BUILD=true
 
 
 # DOMAIN AND API URL
 DOMAIN = 'http://localhost'
-DOMAIN_PATH = '/react-lumen/client/dist/'
-API_URL = 'http://localhost/tms_new/public/'
+DOMAIN_PATH = '/'
+API_URL = 'http://localhost'
